@@ -4113,6 +4113,7 @@ process_hup(void)
   memory_pressure_threshold = 0;
   memory_pressure_duration  = 0;
 #endif
+  clear_servers();
   read_config(NULL);
   check_log();
   cleanup();
@@ -5191,6 +5192,8 @@ int rm_request(
           body = NULL;
           }
         }
+
+      clear_servers();
 
       len = read_config(body);
 
